<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/player1"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/player1Dice1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1"
            />

        <ImageView
            android:id="@+id/player1Dice2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_label"
                android:textSize="20sp"  />

            <TextView
                android:id="@+id/player1_score_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1_score"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/player2"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/player2Dice1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1"
            />

        <ImageView
            android:id="@+id/player2Dice2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dice_1" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_label"
                android:textSize="20sp"  />

            <TextView
                android:id="@+id/player2_score_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1_score"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <Button
            android:id="@+id/instructions_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"  />


        <Button
            android:id="@+id/replay_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replay"/>


    </LinearLayout>


    <Button
        android:id="@+id/play_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:layout_gravity="center_horizontal"/>




</LinearLayout>



